--- a/alpha.html
+++ b/alpha.html
@@ -8,91 +8,103 @@
 </head>
 <body>
     
-    <h1>Alpha Description</h1>
+    <h1>Alpha<span class="black-text"> Description</span></h1>
     <h2><a href="https://www.youtube.com/">YouTube</a></h2>
 
-<!--triggers-->
-    <h3>TRIGGERS</h3>
-    <p>Like - Default</p>
-    <ul>
-        <li>Hover ON</li> <!--cursor hovers over "Like" button-->
-        <li>Hover OFF</li> <!--cursor leaves "Like" button-->
-        <li>Mouse Down</li> <!--user presses "Like" button-->
-        <li>Mouse Up</li> <!--user releases "Like" button-->
-    </ul>
+<!--gif-->
+<div class="gif-container">
+    <img src="alpha-microinteractions-youtube.gif" alt="thumbs up icon" class="alpha-gif">
+</div>
 
-    <p>Like - Active</p>
-    <ul>
-        <li>Hover ON</li> <!--cursor hovers over "Like" button-->
-        <li>Hover OFF</li> <!--cursor leaves "Like" button-->
-        <li>Mouse Down</li> <!--user presses "Like" button-->
-        <li>Mouse Up</li> <!--user releases "Like" button-->
-    </ul>
+<!--triggers-->
+<div class="container">
+    <div class="box">
+        <h3>TRIGGERS</h3>
+        <p>Like - Default</p>
+        <ul>
+            <li>Hover ON</li> <!--cursor hovers over "Like" button-->
+            <li>Hover OFF</li> <!--cursor leaves "Like" button-->
+            <li>Mouse Down</li> <!--user presses "Like" button-->
+            <li>Mouse Up</li> <!--user releases "Like" button-->
+        </ul>
+
+        <p>Like - Active</p>
+        <ul>
+            <li>Hover ON</li> <!--cursor hovers over "Like" button-->
+            <li>Hover OFF</li> <!--cursor leaves "Like" button-->
+            <li>Mouse Down</li> <!--user presses "Like" button-->
+            <li>Mouse Up</li> <!--user releases "Like" button-->
+        </ul>
+    </div>
 
 <!--rules-->
-    <h3>RULES</h3>
-    <p>Like - Default</p>
-    <ul>
-        <li>Hover ON - Button opacity darkens 25%</li>
-        <li>Hover OFF - Button opacity changes to default gray color</li>
-        <li>2 second delay "I like this" appears as tagline</li>
-        <li>Mouse Down - Button opacity darkens to 50%</li>
-        <li>Mouse Up
-            <ul>
-            <li>Icon outline blinks with various colors and effects</li>
-            <li>Bouncy animation plays</li>
-            <li>Button opacity changes to 25%</li>
-            </ul>
-        <li>Database record flag set to TRUE</li>
-    </ul>
+    <div class="box">
+        <h3>RULES</h3>
+        <p>Like - Default</p>
+        <ul>
+            <li>Hover ON - Button opacity darkens 25%</li>
+            <li>Hover OFF - Button opacity changes to default gray color</li>
+            <li>2 second delay "I like this" appears as tagline</li>
+            <li>Mouse Down - Button opacity darkens to 50%</li>
+            <li>Mouse Up
+                <ul>
+                <li>Icon outline blinks with various colors and effects</li>
+                <li>Bouncy animation plays</li>
+                <li>Button opacity changes to 25%</li>
+                </ul>
+            <li>Database record flag set to TRUE</li>
+        </ul>
 
-    <p>Like - Active</p>
-    <ul>
-        <li>Hover ON - Button opacity darkens 25%</li>
-        <li>Hover OFF - Button opacity changes to default gray color</li>
-        <li>2 second delay "Unlike" appears as tagline</li>
-        <li>Mouse Down - Button opacity darkens to 50%</li>
-        <li>Mouse Up</li>
-            <ul>
-            <li>Icon outline fills in with default gray color</li>
-            </ul>
-        <li>Database record flag set to FALSE</li>
-    </ul>
+        <p>Like - Active</p>
+        <ul>
+            <li>Hover ON - Button opacity darkens 25%</li>
+            <li>Hover OFF - Button opacity changes to default gray color</li>
+            <li>2 second delay "Unlike" appears as tagline</li>
+            <li>Mouse Down - Button opacity darkens to 50%</li>
+            <li>Mouse Up</li>
+                <ul>
+                <li>Icon outline fills in with default gray color</li>
+                </ul>
+            <li>Database record flag set to FALSE</li>
+        </ul>
+    </div>
 
 <!--feedback-->
-    <h3>FEEDBACK</h3>
-    <p>Like - Default</p>
-    <ul>
-        <li>Hover ON - Button opacity darkens 25%</li>
-        <li>Hover OFF - Button opacity changes to default gray color</li>
-        <li>2 second delay "I like this" appears as tagline</li>
-        <li>Mouse Down - Button opacity darkens to 50%</li>
-        <li>Mouse Up
-            <ul>
-            <li>Icon outline blinks with various colors and effects</li>
-            <li>Bouncy animation plays</li>
-            <li>Button opacity changes to 25%</li>
-            </ul>
-    </ul>
+    <div class="box">
+        <h3>FEEDBACK</h3>
+        <p>Like - Default</p>
+        <ul>
+            <li>Hover ON - Button opacity darkens 25%</li>
+            <li>Hover OFF - Button opacity changes to default gray color</li>
+            <li>2 second delay "I like this" appears as tagline</li>
+            <li>Mouse Down - Button opacity darkens to 50%</li>
+            <li>Mouse Up
+                <ul>
+                <li>Icon outline blinks with various colors and effects</li>
+                <li>Bouncy animation plays</li>
+                <li>Button opacity changes to 25%</li>
+                </ul>
+        </ul>
 
-    <p>Like - Active</p>
-    <ul>
-        <li>Hover ON - Button opacity darkens 25%</li>
-        <li>Hover OFF - Button opacity changes to default gray color</li>
-        <li>2 second delay "Unlike" appears as tagline</li>
-        <li>Mouse Down - Button opacity darkens to 50%</li>
-        <li>Mouse Up</li>
-            <ul>
-            <li>Icon outline fills in with default gray color</li>
-            </ul>
-    </ul>
+        <p>Like - Active</p>
+        <ul>
+            <li>Hover ON - Button opacity darkens 25%</li>
+            <li>Hover OFF - Button opacity changes to default gray color</li>
+            <li>2 second delay "Unlike" appears as tagline</li>
+            <li>Mouse Down - Button opacity darkens to 50%</li>
+            <li>Mouse Up</li>
+                <ul>
+                <li>Icon outline fills in with default gray color</li>
+                </ul>
+        </ul>
+    </div>
 
 <!--loops and modes-->
-    <h3>LOOPS &amp; MODES</h3>
-    <p>NONE</p>
-
-<!--gif-->
-    <img src="alpha-microinteractions-youtube.gif" alt="thumbs up icon" class="alpha-gif">
+    <div class="box">
+        <h3>LOOPS &amp; MODES</h3>
+        <p>NONE</p>
+    </div>
+</div>
 
 </body>
 </html>
