--- a/index.html
+++ b/index.html
@@ -3,108 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>alpha</title>
-    <link rel="stylesheet" href="alpha.css">
+    <title>idm241</title>
 </head>
 <body>
-    
-    <h1>Alpha<span class="black-text"> Description</span></h1>
-    <h2><a href="https://www.youtube.com/">YouTube</a></h2>
-
-<!--gif-->
-<div class="gif-container">
-    <img src="alpha-microinteractions-youtube.gif" alt="thumbs up icon" class="alpha-gif">
-</div>
-
-<!--triggers-->
-<div class="container">
-    <div class="box">
-        <h3>TRIGGERS</h3>
-        <p>Like - Default</p>
-        <ul>
-            <li>Hover ON</li> <!--cursor hovers over "Like" button-->
-            <li>Hover OFF</li> <!--cursor leaves "Like" button-->
-            <li>Mouse Down</li> <!--user presses "Like" button-->
-            <li>Mouse Up</li> <!--user releases "Like" button-->
-        </ul>
-
-        <p>Like - Active</p>
-        <ul>
-            <li>Hover ON</li> <!--cursor hovers over "Like" button-->
-            <li>Hover OFF</li> <!--cursor leaves "Like" button-->
-            <li>Mouse Down</li> <!--user presses "Like" button-->
-            <li>Mouse Up</li> <!--user releases "Like" button-->
-        </ul>
-    </div>
-
-<!--rules-->
-    <div class="box">
-        <h3>RULES</h3>
-        <p>Like - Default</p>
-        <ul>
-            <li>Hover ON - Button opacity darkens 25%</li>
-            <li>Hover OFF - Button opacity changes to default gray color</li>
-            <li>2 second delay "I like this" appears as tagline</li>
-            <li>Mouse Down - Button opacity darkens to 50%</li>
-            <li>Mouse Up
-                <ul>
-                <li>Icon outline blinks with various colors and effects</li>
-                <li>Bouncy animation plays</li>
-                <li>Button opacity changes to 25%</li>
-                </ul>
-            <li>Database record flag set to TRUE</li>
-        </ul>
-
-        <p>Like - Active</p>
-        <ul>
-            <li>Hover ON - Button opacity darkens 25%</li>
-            <li>Hover OFF - Button opacity changes to default gray color</li>
-            <li>2 second delay "Unlike" appears as tagline</li>
-            <li>Mouse Down - Button opacity darkens to 50%</li>
-            <li>Mouse Up</li>
-                <ul>
-                <li>Icon outline fills in with default gray color</li>
-                </ul>
-            <li>Database record flag set to FALSE</li>
-        </ul>
-    </div>
-
-<!--feedback-->
-    <div class="box">
-        <h3>FEEDBACK</h3>
-        <p>Like - Default</p>
-        <ul>
-            <li>Hover ON - Button opacity darkens 25%</li>
-            <li>Hover OFF - Button opacity changes to default gray color</li>
-            <li>2 second delay "I like this" appears as tagline</li>
-            <li>Mouse Down - Button opacity darkens to 50%</li>
-            <li>Mouse Up
-                <ul>
-                <li>Icon outline blinks with various colors and effects</li>
-                <li>Bouncy animation plays</li>
-                <li>Button opacity changes to 25%</li>
-                </ul>
-        </ul>
-
-        <p>Like - Active</p>
-        <ul>
-            <li>Hover ON - Button opacity darkens 25%</li>
-            <li>Hover OFF - Button opacity changes to default gray color</li>
-            <li>2 second delay "Unlike" appears as tagline</li>
-            <li>Mouse Down - Button opacity darkens to 50%</li>
-            <li>Mouse Up</li>
-                <ul>
-                <li>Icon outline fills in with default gray color</li>
-                </ul>
-        </ul>
-    </div>
-
-<!--loops and modes-->
-    <div class="box">
-        <h3>LOOPS &amp; MODES</h3>
-        <p>NONE</p>
-    </div>
-</div>
-
+    <h1><a href="alpha.html">alpha</a></h1>
 </body>
 </html>
