--- a/alpha.html
+++ b/alpha.html
@@ -21,7 +21,7 @@
 
 <!-- link -->
 <h4>
-    <a href="https://youtube.com/">https://youtube.com/</a>
+    <a href="https://youtube.com/" target="_blank">https://youtube.com/</a>
 </h4>
 
 <!-- triggers -->
