--- a/alpha.html
+++ b/alpha.html
@@ -50,10 +50,21 @@
             <h3>RULES</h3>
             <p>Like - Default</p>
             <ul>
-                <li>Hover ON - Button opacity darkens 25%</li>
-                <li>Hover OFF - Button opacity changes to default gray color</li>
-                <li>2 second delay "I like this" appears as tagline</li>
-                <li>Mouse Down - Button opacity darkens to 50%</li>
+                <li>Hover ON</li>
+                    <ul>
+                        <li>Button opacity darkens 25%</li>
+                        <li>2 second delay "I like this" appears as tagline</li>
+                    </ul>
+                <li>Hover OFF</li>
+                    <ul>
+                        <li>Button opacity changes to default gray color</li>
+                        <li>"I like this" disappears immediately</li>
+                    </ul>
+                <li>Mouse Down</li>
+                    <ul>
+                        <li>Button opacity darkens to 50%</li>
+                        <li>"I like this" disappears immediately</li>
+                    </ul>
                 <li>Mouse Up
                     <ul>
                     <li>Icon outline blinks with various colors and effects</li>
@@ -65,10 +76,21 @@
 
             <p>Like - Active</p>
             <ul>
-                <li>Hover ON - Button opacity darkens 25%</li>
-                <li>Hover OFF - Button opacity changes to default gray color</li>
-                <li>2 second delay "Unlike" appears as tagline</li>
-                <li>Mouse Down - Button opacity darkens to 50%</li>
+                <li>Hover ON</li>
+                    <ul>
+                        <li>Button opacity darkens 25%</li>
+                        <li>2 second delay "Unlike" appears as tagline</li>
+                    </ul>
+                <li>Hover OFF</li>                    
+                    <ul>
+                        <li>Button opacity changes to default gray color</li>
+                        <li>"Unlike" disappears immediately</li>
+                    </ul>
+                <li>Mouse Down</li>
+                    <ul>
+                        <li>Button opacity darkens to 50%</li>
+                        <li>"Unlike" disappears immediately</li>
+                    </ul>
                 <li>Mouse Up</li>
                     <ul>
                     <li>Icon outline fills in with default gray color</li>
@@ -82,10 +104,21 @@
             <h3>FEEDBACK</h3>
             <p>Like - Default</p>
             <ul>
-                <li>Hover ON - Button opacity darkens 25%</li>
-                <li>Hover OFF - Button opacity changes to default gray color</li>
-                <li>2 second delay "I like this" appears as tagline</li>
-                <li>Mouse Down - Button opacity darkens to 50%</li>
+                <li>Hover ON</li>
+                    <ul>
+                        <li>Button opacity darkens 25%</li>
+                        <li>2 second delay "I like this" appears as tagline</li>
+                    </ul>
+                <li>Hover OFF</li>
+                    <ul>
+                        <li>Button opacity changes to default gray color</li>
+                        <li>"I like this" disappears immediately</li>
+                    </ul>
+                <li>Mouse Down</li>
+                    <ul>
+                        <li>Button opacity darkens to 50%</li>
+                        <li>"I like this" disappears immediately</li>
+                    </ul>
                 <li>Mouse Up
                     <ul>
                     <li>Icon outline blinks with various colors and effects</li>
@@ -96,15 +129,27 @@
 
             <p>Like - Active</p>
             <ul>
-                <li>Hover ON - Button opacity darkens 25%</li>
-                <li>Hover OFF - Button opacity changes to default gray color</li>
-                <li>2 second delay "Unlike" appears as tagline</li>
-                <li>Mouse Down - Button opacity darkens to 50%</li>
-                <li>Mouse Up</li>
-                    <ul>
-                    <li>Icon outline fills in with default gray color</li>
-                    </ul>
-            </ul>
+                <ul>
+                    <li>Hover ON</li>
+                        <ul>
+                            <li>Button opacity darkens 25%</li>
+                            <li>2 second delay "Unlike" appears as tagline</li>
+                        </ul>
+                    <li>Hover OFF</li>                    
+                        <ul>
+                            <li>Button opacity changes to default gray color</li>
+                            <li>"Unlike" disappears immediately</li>
+                        </ul>
+                    <li>Mouse Down</li>
+                        <ul>
+                            <li>Button opacity darkens to 50%</li>
+                            <li>"Unlike" disappears immediately</li>
+                        </ul>
+                    <li>Mouse Up</li>
+                        <ul>
+                        <li>Icon outline fills in with default gray color</li>
+                        </ul>
+                </ul>
         </div>
 
 <!-- loops and modes -->
