--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1><a href="alpha.html">alpha</a></h1>
+    <h1><a href="alpha-build.html">alpha build</a></h1>
 </body>
 </html>
