--- a/alpha-build.html
+++ b/alpha-build.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="card-container">
-                    <img src="graphics/header-background-placeholder.webp" alt="Header Background" class="header-background">
+                    <img src="graphics/header-background-placeholder.webp" alt="Header Background" class="card-header-background">
 
         <div class="card-header">
             <button class="close-button" type="button">×</button>
@@ -30,7 +30,6 @@
             <button class="connect-button" type="button">+ Connect</button>
         </div>
     </div>
-    
 
 </body>
 </html>
