--- a/alpha.html
+++ b/alpha.html
@@ -13,7 +13,7 @@
             Alpha <span class="black-text">Description</span>
         </h2>
         <div class="logo-container">
-            <img src="youtube-logo.png" alt="youtube logo" class="alpha-logo">
+            <img src="graphics/youtube-logo.png" alt="youtube logo" class="alpha-logo">
         </div>
     </div>
 
