--- a/alpha-build.html
+++ b/alpha-build.html
@@ -80,24 +80,24 @@
                     <ul>
                         <li>Cursor changes to finger</li>
                         <li>Button opacity darkens 15% blue</li>
-                        <li>Button icon and text darkens 25% blue</li>
+                        <li>Button outline and text lightens 25% blue</li>
                     </ul>
                 <li>Hover OFF</li>
                     <ul>
                         <li>Cursor changes back to pointer</li>
                         <li>Button opacity changes to default white color</li>
-                        <li>Button icon and text changes to default blue</li>
+                        <li>Button outline and text changes to default blue</li>
                     </ul>
                 <li>Mouse Down</li>
                     <ul>
-                        <li>Button opacity darkens 25% blue</li>
+                        <li>Button opacity changes to light gray</li>
+                        <li>Button outline and text changes to black</li>
                     </ul>
                 <li>Mouse Up</li>
                     <ul>
-                        <li>Button icon changes to clock</li>
                         <li>Button text changes to "Pending"</li>    
-                        <li>Button opacity changes to default white color</li>
-                        <li>Button icon and text changes to black color</li>
+                        <li>Button opacity changes to 15% blue</li>
+                        <li>Button outline and text lightens 25% blue</li>
                         <li>Database record flag set to TRUE</li>
                     </ul>
             </ul>
@@ -140,25 +140,24 @@
                     <ul>
                         <li>Cursor changes to finger</li>
                         <li>Button opacity darkens 15% blue</li>
-                        <li>Button icon and text darkens 25% blue</li>
+                        <li>Button outline and text lightens 25% blue</li>
                     </ul>
                 <li>Hover OFF</li>
                     <ul>
                         <li>Cursor changes back to pointer</li>
                         <li>Button opacity changes to default white color</li>
-                        <li>Button icon and text changes to default blue</li>
+                        <li>Button outline and text changes to default blue</li>
                     </ul>
                 <li>Mouse Down</li>
                     <ul>
-                        <li>Button opacity darkens 25% blue</li>
+                        <li>Button opacity changes to light gray</li>
+                        <li>Button outline and text changes to black</li>
                     </ul>
                 <li>Mouse Up</li>
                     <ul>
-                        <li>Button icon changes to clock</li>
                         <li>Button text changes to "Pending"</li>    
-                        <li>Button opacity changes to default white color</li>
-                        <li>Button icon and text changes to black color</li>
-                        <li>Quick pinging noise plays</li>
+                        <li>Button opacity changes to 15% blue</li>
+                        <li>Button outline and text lightens 25% blue</li>
                     </ul>
             </ul>
 
@@ -167,30 +166,29 @@
                 <li>Hover ON</li>
                     <ul>
                         <li>Cursor changes to finger</li>
-                        <li>Button opacity darkens 15% gray</li>
-                        <li>Button icon and text darkens 25% gray</li>
+                        <li>Button opacity darkens 15% blue</li>
+                        <li>Button outline and text lightens 25% blue</li>
                     </ul>
                 <li>Hover OFF</li>                    
                     <ul>
                         <li>Cursor changes back to pointer</li>
                         <li>Button opacity changes to default white color</li>
-                        <li>Button icon and text changes to default black</li>
+                        <li>Button outline and text changes to default blue</li>
                     </ul>
                 <li>Mouse Down</li>
                     <ul>
-                        <li>Button opacity darkens 25% gray</li>
+                        <li>Button opacity changes to light gray</li>
+                        <li>Button outline and text changes to black</li>
                     </ul>
                 <li>Mouse Up</li>
                     <ul>
-                        <li>Button icon changes back to default</li>
-                        <li>Button text changes back to "Connect"</li>    
-                        <li>Button opacity changes to default white color</li>
-                        <li>Button icon and text changes to default blue</li>
+                        <li>Button text changes to "+ Connect"</li>    
+                        <li>Button opacity changes to 15% blue</li>
+                        <li>Button outline and text lightens 25% blue</li>
                     </ul>
             </ul>
         </div>
 
-        
 
     <!-- loops and modes -->
         <div class="box">
