--- a/alpha-build.html
+++ b/alpha-build.html
@@ -95,7 +95,7 @@
                     </ul>
                 <li>Mouse Up</li>
                     <ul>
-                        <li>Button text changes to "Pending"</li>    
+                        <li>Button text changes to "Pending..."</li>    
                         <li>Button opacity changes to 15% blue</li>
                         <li>Button outline and text lightens 25% blue</li>
                         <li>Database record flag set to TRUE</li>
@@ -107,25 +107,24 @@
                 <li>Hover ON</li>
                     <ul>
                         <li>Cursor changes to finger</li>
-                        <li>Button opacity darkens 15% gray</li>
-                        <li>Button icon and text darkens 25% gray</li>
+                        <li>Button opacity darkens 15% blue</li>
+                        <li>Button outline and text lightens 25% blue</li>
                     </ul>
                 <li>Hover OFF</li>                    
                     <ul>
                         <li>Cursor changes back to pointer</li>
                         <li>Button opacity changes to default white color</li>
-                        <li>Button icon and text changes to default black</li>
+                        <li>Button outline and text changes to default blue</li>
                     </ul>
                 <li>Mouse Down</li>
                     <ul>
-                        <li>Button opacity darkens 25% gray</li>
-                    </ul>
+                        <li>Button opacity changes to light gray</li>
+                        <li>Button outline and text changes to black</li>                    </ul>
                 <li>Mouse Up</li>
                     <ul>
-                        <li>Button icon changes back to default</li>
-                        <li>Button text changes back to "Connect"</li>    
-                        <li>Button opacity changes to default white color</li>
-                        <li>Button icon and text changes to default blue</li>
+                        <li>Button text changes back to "+ Connect"</li>    
+                        <li>Button opacity changes to 15% blue</li>
+                        <li>Button outline and text lightens 25% blue</li>
                         <li>Database record flag set to FALSE</li>
                     </ul>
             </ul>
@@ -133,8 +132,7 @@
 
     <!-- feedback -->
         <div class="box">
-            <h3>FEEDBACK</h3>
-            <p>Connect - Default</p>
+            <h3>FEEDBACK</h3>            <p>Connect - Default</p>
             <ul>
                 <li>Hover ON</li>
                     <ul>
@@ -155,7 +153,7 @@
                     </ul>
                 <li>Mouse Up</li>
                     <ul>
-                        <li>Button text changes to "Pending"</li>    
+                        <li>Button text changes to "Pending..."</li>    
                         <li>Button opacity changes to 15% blue</li>
                         <li>Button outline and text lightens 25% blue</li>
                     </ul>
@@ -178,11 +176,10 @@
                 <li>Mouse Down</li>
                     <ul>
                         <li>Button opacity changes to light gray</li>
-                        <li>Button outline and text changes to black</li>
-                    </ul>
+                        <li>Button outline and text changes to black</li>                    </ul>
                 <li>Mouse Up</li>
                     <ul>
-                        <li>Button text changes to "+ Connect"</li>    
+                        <li>Button text changes back to "+ Connect"</li>    
                         <li>Button opacity changes to 15% blue</li>
                         <li>Button outline and text lightens 25% blue</li>
                     </ul>
