--- a/alpha.html
+++ b/alpha.html
@@ -19,7 +19,7 @@
 
 <!-- link -->
 <h4>
-    <a href="https://youtube.com/" target="_blank">https://youtube.com/</a>
+    <a href="https://youtube.com/" target="_blank" class="youtube-link">https://youtube.com/</a>
 </h4>
 
 <!-- triggers -->
