--- a/alpha.html
+++ b/alpha.html
@@ -28,18 +28,18 @@
             <h3>TRIGGERS</h3>
             <p>Like - Default</p>
             <ul>
-                <li>Hover ON</li> <!--cursor hovers over "Like" button-->
-                <li>Hover OFF</li> <!--cursor leaves "Like" button-->
-                <li>Mouse Down</li> <!--user presses "Like" button-->
-                <li>Mouse Up</li> <!--user releases "Like" button-->
+                <li>Hover ON</li> 
+                <li>Hover OFF</li> 
+                <li>Mouse Down</li> 
+                <li>Mouse Up</li> 
             </ul>
 
             <p>Like - Active</p>
             <ul>
-                <li>Hover ON</li> <!--cursor hovers over "Like" button-->
-                <li>Hover OFF</li> <!--cursor leaves "Like" button-->
-                <li>Mouse Down</li> <!--user presses "Like" button-->
-                <li>Mouse Up</li> <!--user releases "Like" button-->
+                <li>Hover ON</li> 
+                <li>Hover OFF</li> 
+                <li>Mouse Down</li> 
+                <li>Mouse Up</li>
             </ul>
         </div>
 
