--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1><a href="alpha.html">alpha</a></h1>
     <h1><a href="alpha-build.html">alpha build</a></h1>
+    <h1><a href="beta.html">beta</a></h1>
 </body>
 </html>
