--- a/alpha.html
+++ b/alpha.html
@@ -28,134 +28,149 @@
             <h3>TRIGGERS</h3>
             <p>Like - Default</p>
             <ul>
-                <li>Hover ON</li> 
-                <li>Hover OFF</li> 
-                <li>Mouse Down</li> 
-                <li>Mouse Up</li> 
+                <li>Hover ON</li>
+                <li>Hover OFF</li>
+                <li>Mouse Down</li>
+                <li>Mouse Up</li>
             </ul>
 
             <p>Like - Active</p>
             <ul>
-                <li>Hover ON</li> 
-                <li>Hover OFF</li> 
-                <li>Mouse Down</li> 
+                <li>Hover ON</li>
+                <li>Hover OFF</li>
+                <li>Mouse Down</li>
                 <li>Mouse Up</li>
             </ul>
         </div>
 
-<!-- rules -->
-        <div class="box">
-            <h3>RULES</h3>
-            <p>Like - Default</p>
-            <ul>
-                <li>Hover ON</li>
-                    <ul>
-                        <li>Button opacity darkens 25%</li>
-                        <li>2 second delay "I like this" appears as tagline</li>
-                    </ul>
-                <li>Hover OFF</li>
-                    <ul>
-                        <li>Button opacity changes to default gray color</li>
-                        <li>"I like this" disappears immediately</li>
-                    </ul>
-                <li>Mouse Down</li>
-                    <ul>
-                        <li>Button opacity darkens to 50%</li>
-                        <li>"I like this" disappears immediately</li>
-                    </ul>
-                <li>Mouse Up
-                    <ul>
+    <!-- rules -->
+    <div class="box">
+        <h3>RULES</h3>
+        <p>Like - Default</p>
+        <ul>
+            <li>Hover ON
+                <ul>
+                    <li>Button opacity darkens 25%</li>
+                    <li>2 second delay "I like this" appears as tagline</li>
+                </ul>
+            </li>
+            <li>Hover OFF
+                <ul>
+                    <li>Button opacity changes to default gray color</li>
+                    <li>"I like this" disappears immediately</li>
+                </ul>
+            </li>
+            <li>Mouse Down
+                <ul>
+                    <li>Button opacity darkens to 50%</li>
+                    <li>"I like this" disappears immediately</li>
+                </ul>
+            </li>
+            <li>Mouse Up
+                <ul>
                     <li>Icon outline blinks with various colors and effects</li>
                     <li>Bouncy animation plays</li>
                     <li>Button opacity changes to 25%</li>
                     <li>Database record flag set to TRUE</li>
-                    </ul>
-            </ul>
+                </ul>
+            </li>
+        </ul>
 
-            <p>Like - Active</p>
-            <ul>
-                <li>Hover ON</li>
-                    <ul>
-                        <li>Button opacity darkens 25%</li>
-                        <li>2 second delay "Unlike" appears as tagline</li>
-                    </ul>
-                <li>Hover OFF</li>                    
-                    <ul>
-                        <li>Button opacity changes to default gray color</li>
-                        <li>"Unlike" disappears immediately</li>
-                    </ul>
-                <li>Mouse Down</li>
-                    <ul>
-                        <li>Button opacity darkens to 50%</li>
-                        <li>"Unlike" disappears immediately</li>
-                    </ul>
-                <li>Mouse Up</li>
-                    <ul>
+        <p>Like - Active</p>
+        <ul>
+            <li>Hover ON
+                <ul>
+                    <li>Button opacity darkens 25%</li>
+                    <li>2 second delay "Unlike" appears as tagline</li>
+                </ul>
+            </li>
+            <li>Hover OFF
+                <ul>
+                    <li>Button opacity changes to default gray color</li>
+                    <li>"Unlike" disappears immediately</li>
+                </ul>
+            </li>
+            <li>Mouse Down
+                <ul>
+                    <li>Button opacity darkens to 50%</li>
+                    <li>"Unlike" disappears immediately</li>
+                </ul>
+            </li>
+            <li>Mouse Up
+                <ul>
                     <li>Icon outline fills in with default gray color</li>
                     <li>Database record flag set to FALSE</li>
-                    </ul>
-            </ul>
-        </div>
+                </ul>
+            </li>
+        </ul>
+    </div>
 
-<!-- feedback -->
-        <div class="box">
-            <h3>FEEDBACK</h3>
-            <p>Like - Default</p>
-            <ul>
-                <li>Hover ON</li>
-                    <ul>
-                        <li>Button opacity darkens 25%</li>
-                        <li>2 second delay "I like this" appears as tagline</li>
-                    </ul>
-                <li>Hover OFF</li>
-                    <ul>
-                        <li>Button opacity changes to default gray color</li>
-                        <li>"I like this" disappears immediately</li>
-                    </ul>
-                <li>Mouse Down</li>
-                    <ul>
-                        <li>Button opacity darkens to 50%</li>
-                        <li>"I like this" disappears immediately</li>
-                    </ul>
-                <li>Mouse Up
-                    <ul>
+    <!-- feedback -->
+    <div class="box">
+        <h3>FEEDBACK</h3>
+        <p>Like - Default</p>
+        <ul>
+            <li>Hover ON
+                <ul>
+                    <li>Button opacity darkens 25%</li>
+                    <li>2 second delay "I like this" appears as tagline</li>
+                </ul>
+            </li>
+            <li>Hover OFF
+                <ul>
+                    <li>Button opacity changes to default gray color</li>
+                    <li>"I like this" disappears immediately</li>
+                </ul>
+            </li>
+            <li>Mouse Down
+                <ul>
+                    <li>Button opacity darkens to 50%</li>
+                    <li>"I like this" disappears immediately</li>
+                </ul>
+            </li>
+            <li>Mouse Up
+                <ul>
                     <li>Icon outline blinks with various colors and effects</li>
                     <li>Bouncy animation plays</li>
                     <li>Button opacity changes to 25%</li>
-                    </ul>
-            </ul>
-
-            <p>Like - Active</p>
-            <ul>
-                <ul>
-                    <li>Hover ON</li>
-                        <ul>
-                            <li>Button opacity darkens 25%</li>
-                            <li>2 second delay "Unlike" appears as tagline</li>
-                        </ul>
-                    <li>Hover OFF</li>                    
-                        <ul>
-                            <li>Button opacity changes to default gray color</li>
-                            <li>"Unlike" disappears immediately</li>
-                        </ul>
-                    <li>Mouse Down</li>
-                        <ul>
-                            <li>Button opacity darkens to 50%</li>
-                            <li>"Unlike" disappears immediately</li>
-                        </ul>
-                    <li>Mouse Up</li>
-                        <ul>
-                        <li>Icon outline fills in with default gray color</li>
-                        </ul>
                 </ul>
-        </div>
+            </li>
+        </ul>
 
-<!-- loops and modes -->
-        <div class="box">
-            <h3>LOOPS &amp; MODES</h3>
-            <p>NONE</p>
-        </div>
+        <p>Like - Active</p>
+        <ul>
+            <li>Hover ON
+                <ul>
+                    <li>Button opacity darkens 25%</li>
+                    <li>2 second delay "Unlike" appears as tagline</li>
+                </ul>
+            </li>
+            <li>Hover OFF
+                <ul>
+                    <li>Button opacity changes to default gray color</li>
+                    <li>"Unlike" disappears immediately</li>
+                </ul>
+            </li>
+            <li>Mouse Down
+                <ul>
+                    <li>Button opacity darkens to 50%</li>
+                    <li>"Unlike" disappears immediately</li>
+                </ul>
+            </li>
+            <li>Mouse Up
+                <ul>
+                    <li>Icon outline fills in with default gray color</li>
+                </ul>
+            </li>
+        </ul>
     </div>
+
+    <!-- loops and modes -->
+    <div class="box">
+        <h3>LOOPS &amp; MODES</h3>
+        <p>NONE</p>
+    </div>
+</div>
 
 <!-- gif -->
 <div class="gif-container">
