--- a/alpha-build.html
+++ b/alpha-build.html
@@ -46,148 +46,166 @@
     </div>
 
 <!-- triggers -->
-    <div class="container">
-        <div class="box">
-            <h3>TRIGGERS</h3>
-            <p>Connect - Default</p>
-            <ul>
-                <li>Hover ON</li> <!--cursor hovers over "Like" button-->
-                <li>Hover OFF</li> <!--cursor leaves "Like" button-->
-                <li>Mouse Down</li> <!--user presses "Like" button-->
-                <li>Mouse Up</li> <!--user releases "Like" button-->
-            </ul>
+<div class="container">
+    <div class="box">
+        <h3>TRIGGERS</h3>
+        <p>Connect - Default</p>
+        <ul>
+            <li>Hover ON</li>
+            <li>Hover OFF</li>
+            <li>Mouse Down</li>
+            <li>Mouse Up</li>
+        </ul>
 
-            <p>Connect - Active</p>
-            <ul>
-                <li>Hover ON</li> <!--cursor hovers over "Like" button-->
-                <li>Hover OFF</li> <!--cursor leaves "Like" button-->
-                <li>Mouse Down</li> <!--user presses "Like" button-->
-                <li>Mouse Up</li> <!--user releases "Like" button-->
-            </ul>
-        </div>
+        <p>Connect - Active</p>
+        <ul>
+            <li>Hover ON</li>
+            <li>Hover OFF</li>
+            <li>Mouse Down</li>
+            <li>Mouse Up</li>
+        </ul>
+    </div>
 
     <!-- rules -->
-        <div class="box">
-            <h3>RULES</h3>
-            <p>Connect - Default</p>
-            <ul>
-                <li>Hover ON</li>
-                    <ul>
-                        <li>Cursor changes to finger</li>
-                        <li>Button opacity darkens 15% blue</li>
-                        <li>Button outline and text lightens 25% blue</li>
-                    </ul>
-                <li>Hover OFF</li>
-                    <ul>
-                        <li>Cursor changes back to pointer</li>
-                        <li>Button opacity changes to default white color</li>
-                        <li>Button outline and text changes to default blue</li>
-                    </ul>
-                <li>Mouse Down</li>
-                    <ul>
-                        <li>Button opacity changes to light gray</li>
-                        <li>Button outline and text changes to black</li>
-                    </ul>
-                <li>Mouse Up</li>
-                    <ul>
-                        <li>Button text changes to "Pending..."</li>    
-                        <li>Button opacity changes to 15% blue</li>
-                        <li>Button outline and text lightens 25% blue</li>
-                        <li>Database record flag set to TRUE</li>
-                    </ul>
-            </ul>
+    <div class="box">
+        <h3>RULES</h3>
+        <p>Connect - Default</p>
+        <ul>
+            <li>Hover ON
+                <ul>
+                    <li>Cursor changes to finger</li>
+                    <li>Button opacity darkens 15% blue</li>
+                    <li>Button outline and text lightens 25% blue</li>
+                </ul>
+            </li>
+            <li>Hover OFF
+                <ul>
+                    <li>Cursor changes back to pointer</li>
+                    <li>Button opacity changes to default white color</li>
+                    <li>Button outline and text changes to default blue</li>
+                </ul>
+            </li>
+            <li>Mouse Down
+                <ul>
+                    <li>Button opacity changes to light gray</li>
+                    <li>Button outline and text changes to black</li>
+                </ul>
+            </li>
+            <li>Mouse Up
+                <ul>
+                    <li>Button text changes to "Pending..."</li>
+                    <li>Button opacity changes to 15% blue</li>
+                    <li>Button outline and text lightens 25% blue</li>
+                    <li>Database record flag set to TRUE</li>
+                </ul>
+            </li>
+        </ul>
 
-            <p>Connect - Active</p>
-            <ul>
-                <li>Hover ON</li>
-                    <ul>
-                        <li>Cursor changes to finger</li>
-                        <li>Button opacity darkens 15% blue</li>
-                        <li>Button outline and text lightens 25% blue</li>
-                    </ul>
-                <li>Hover OFF</li>                    
-                    <ul>
-                        <li>Cursor changes back to pointer</li>
-                        <li>Button opacity changes to default white color</li>
-                        <li>Button outline and text changes to default blue</li>
-                    </ul>
-                <li>Mouse Down</li>
-                    <ul>
-                        <li>Button opacity changes to light gray</li>
-                        <li>Button outline and text changes to black</li>                    </ul>
-                <li>Mouse Up</li>
-                    <ul>
-                        <li>Button text changes back to "+ Connect"</li>    
-                        <li>Button opacity changes to 15% blue</li>
-                        <li>Button outline and text lightens 25% blue</li>
-                        <li>Database record flag set to FALSE</li>
-                    </ul>
-            </ul>
-        </div>
+        <p>Connect - Active</p>
+        <ul>
+            <li>Hover ON
+                <ul>
+                    <li>Cursor changes to finger</li>
+                    <li>Button opacity darkens 15% blue</li>
+                    <li>Button outline and text lightens 25% blue</li>
+                </ul>
+            </li>
+            <li>Hover OFF
+                <ul>
+                    <li>Cursor changes back to pointer</li>
+                    <li>Button opacity changes to default white color</li>
+                    <li>Button outline and text changes to default blue</li>
+                </ul>
+            </li>
+            <li>Mouse Down
+                <ul>
+                    <li>Button opacity changes to light gray</li>
+                    <li>Button outline and text changes to black</li>
+                </ul>
+            </li>
+            <li>Mouse Up
+                <ul>
+                    <li>Button text changes back to "+ Connect"</li>
+                    <li>Button opacity changes to 15% blue</li>
+                    <li>Button outline and text lightens 25% blue</li>
+                    <li>Database record flag set to FALSE</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 
     <!-- feedback -->
-        <div class="box">
-            <h3>FEEDBACK</h3>            <p>Connect - Default</p>
-            <ul>
-                <li>Hover ON</li>
-                    <ul>
-                        <li>Cursor changes to finger</li>
-                        <li>Button opacity darkens 15% blue</li>
-                        <li>Button outline and text lightens 25% blue</li>
-                    </ul>
-                <li>Hover OFF</li>
-                    <ul>
-                        <li>Cursor changes back to pointer</li>
-                        <li>Button opacity changes to default white color</li>
-                        <li>Button outline and text changes to default blue</li>
-                    </ul>
-                <li>Mouse Down</li>
-                    <ul>
-                        <li>Button opacity changes to light gray</li>
-                        <li>Button outline and text changes to black</li>
-                    </ul>
-                <li>Mouse Up</li>
-                    <ul>
-                        <li>Button text changes to "Pending..."</li>    
-                        <li>Button opacity changes to 15% blue</li>
-                        <li>Button outline and text lightens 25% blue</li>
-                    </ul>
-            </ul>
+    <div class="box">
+        <h3>FEEDBACK</h3>
+        <p>Connect - Default</p>
+        <ul>
+            <li>Hover ON
+                <ul>
+                    <li>Cursor changes to finger</li>
+                    <li>Button opacity darkens 15% blue</li>
+                    <li>Button outline and text lightens 25% blue</li>
+                </ul>
+            </li>
+            <li>Hover OFF
+                <ul>
+                    <li>Cursor changes back to pointer</li>
+                    <li>Button opacity changes to default white color</li>
+                    <li>Button outline and text changes to default blue</li>
+                </ul>
+            </li>
+            <li>Mouse Down
+                <ul>
+                    <li>Button opacity changes to light gray</li>
+                    <li>Button outline and text changes to black</li>
+                </ul>
+            </li>
+            <li>Mouse Up
+                <ul>
+                    <li>Button text changes to "Pending..."</li>
+                    <li>Button opacity changes to 15% blue</li>
+                    <li>Button outline and text lightens 25% blue</li>
+                </ul>
+            </li>
+        </ul>
 
-            <p>Connect - Active</p>
-            <ul>
-                <li>Hover ON</li>
-                    <ul>
-                        <li>Cursor changes to finger</li>
-                        <li>Button opacity darkens 15% blue</li>
-                        <li>Button outline and text lightens 25% blue</li>
-                    </ul>
-                <li>Hover OFF</li>                    
-                    <ul>
-                        <li>Cursor changes back to pointer</li>
-                        <li>Button opacity changes to default white color</li>
-                        <li>Button outline and text changes to default blue</li>
-                    </ul>
-                <li>Mouse Down</li>
-                    <ul>
-                        <li>Button opacity changes to light gray</li>
-                        <li>Button outline and text changes to black</li>                    </ul>
-                <li>Mouse Up</li>
-                    <ul>
-                        <li>Button text changes back to "+ Connect"</li>    
-                        <li>Button opacity changes to 15% blue</li>
-                        <li>Button outline and text lightens 25% blue</li>
-                    </ul>
-            </ul>
-        </div>
-
+        <p>Connect - Active</p>
+        <ul>
+            <li>Hover ON
+                <ul>
+                    <li>Cursor changes to finger</li>
+                    <li>Button opacity darkens 15% blue</li>
+                    <li>Button outline and text lightens 25% blue</li>
+                </ul>
+            </li>
+            <li>Hover OFF
+                <ul>
+                    <li>Cursor changes back to pointer</li>
+                    <li>Button opacity changes to default white color</li>
+                    <li>Button outline and text changes to default blue</li>
+                </ul>
+            </li>
+            <li>Mouse Down
+                <ul>
+                    <li>Button opacity changes to light gray</li>
+                    <li>Button outline and text changes to black</li>
+                </ul>
+            </li>
+            <li>Mouse Up
+                <ul>
+                    <li>Button text changes back to "+ Connect"</li>
+                    <li>Button opacity changes to 15% blue</li>
+                    <li>Button outline and text lightens 25% blue</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 
     <!-- loops and modes -->
-        <div class="box">
-            <h3>LOOPS &amp; MODES</h3>
-            <p>NONE</p>
-        </div>
+    <div class="box">
+        <h3>LOOPS &amp; MODES</h3>
+        <p>NONE</p>
     </div>
+</div>
 
 <script src="alpha.js"></script>
 </body>
